# soundplay

./: LICENSE  README.md  TODO.md  pyproject.toml  reich.sh
soundplay/core/: audio.py  spectral.py  timeutil.py
soundplay/studio/: __init__.py  playback.py  repl.py  sound.py  viz.py
soundplay/tools/: concat.py  convert.py  decompose.py  denoise.py  expand.py  fade.py  filter.py  gain.py  gate.py  info.py  join.py  loop.py  mix.py  morph.py  normalize.py  pitch_track.py  plot.py  resynth.py  reverse.py  rms.py  spectralize.py  stretch.py  transpose.py  trim.py
tests/: conftest.py  test_audio.py  test_concat.py  test_convert.py  test_denoise.py  test_fade.py  test_filter.py  test_gain.py  test_gate.py  test_loop.py  test_mix.py  test_morph.py  test_normalize.py  test_pitch_track.py  test_reverse.py  test_rms.py  test_sound.py  test_spectral.py  test_stretch.py  test_timeutil.py  test_transpose.py  test_trim.py
