[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soundplay"
version = "0.1.0"
description = "Unix-style command-line tools for audio file manipulation"
requires-python = ">=3.10"
dependencies = [
    "soundfile",
    "numpy",
    "scipy",
    "pydub",
    "click",
]

[project.optional-dependencies]
test = ["pytest"]
studio = ["ipython", "sounddevice", "matplotlib"]

[project.scripts]
sp-info     = "soundplay.tools.info:main"
sp-convert  = "soundplay.tools.convert:main"
sp-gain     = "soundplay.tools.gain:main"
sp-trim     = "soundplay.tools.trim:main"
sp-concat   = "soundplay.tools.concat:main"
sp-mix      = "soundplay.tools.mix:main"
sp-reverse  = "soundplay.tools.reverse:main"
sp-normalize = "soundplay.tools.normalize:main"
sp-fade     = "soundplay.tools.fade:main"
sp-filter       = "soundplay.tools.filter:main"
sp-spectralize  = "soundplay.tools.spectralize:main"
sp-resynth      = "soundplay.tools.resynth:main"
sp-plot         = "soundplay.tools.plot:main"
sp-decompose    = "soundplay.tools.decompose:main"
sp-expand       = "soundplay.tools.expand:main"
sp-loop         = "soundplay.tools.loop:main"
sp-join         = "soundplay.tools.join:main"
sp-transpose    = "soundplay.tools.transpose:main"
sp-gate         = "soundplay.tools.gate:main"
sp-denoise      = "soundplay.tools.denoise:main"
sp-morph        = "soundplay.tools.morph:main"
sp-stretch      = "soundplay.tools.stretch:main"
sp-pitch-track  = "soundplay.tools.pitch_track:main"
sp-rms          = "soundplay.tools.rms:main"
sp-repl         = "soundplay.studio.repl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["soundplay*"]
